tests/negative/MicroJuvix/NoStrictlyPositiveDataTypes/E1.juvix
module E1;
inductive A {
  ctor : (A -> A) -> A;
};
end;
